--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,12 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      #canvas {
-        border: 1px solid hotpink;
+      html {
+        height: 100%;
+      }
+      body {
+        margin: 0;
+        height: 100%;
       }
     </style>
     <script src="http://localhost:35729/livereload.js"></script>
