Begin workshopping presentation

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,9 @@
         margin: 0;
         height: 100%;
       }
+      canvas {
+        background-color: #333;
+      }
     </style>
     <script src="http://localhost:35729/livereload.js"></script>
   </head>
